--- a/portfolio.html
+++ b/portfolio.html
@@ -32,22 +32,22 @@
         <div class="portfolio-container">
             <div class="portfolio-column">
                 <div class="portfolio-item">
-                    <img src="/api/placeholder/400/300" alt="Project 1">
-                    <h3>Project 1</h3>
+                    <img src="img/Black_jack_game.png" alt="Black_jack_game">
+                    <h3>Black Jack Game</h3>
                     <p>Description of Project 1. Highlight key features and technologies used.</p>
                     <a href="#" class="btn">View Project</a>
                 </div>
                 <div class="portfolio-item">
-                    <img src="/api/placeholder/400/300" alt="Project 2">
-                    <h3>Project 2</h3>
+                    <img src="img/Flipped_card.png" alt="Flipped_card">
+                    <h3>Flipped Card</h3>
                     <p>Description of Project 2. Explain the problem it solves and your role.</p>
                     <a href="#" class="btn">View Project</a>
                 </div>
             </div>
             <div class="portfolio-column">
                 <div class="portfolio-item">
-                    <img src="/api/placeholder/400/300" alt="Project 3">
-                    <h3>Project 3</h3>
+                    <img src="img/Chat_app.png" alt="Chat_app">
+                    <h3>Chat App</h3>
                     <p>Overview of Project 3. Mention any notable achievements or challenges overcome.</p>
                     <a href="#" class="btn">View Project</a>
                 </div>
