--- a/portfolio.html
+++ b/portfolio.html
@@ -46,13 +46,13 @@
             </div>
             <div class="portfolio-column">
                 <div class="portfolio-item">
-                    <img src="img/Chat_app.png" alt="Chat_app">
+                    <img src="img/Amazon.png" alt="Amazon Clone Frontend">
                     <h3>Chat App</h3>
                     <p>Overview of Project 3. Mention any notable achievements or challenges overcome.</p>
                     <a href="#" class="btn">View Project</a>
                 </div>
                 <div class="portfolio-item">
-                    <img src="/api/placeholder/400/300" alt="Project 4">
+                    <img src="img/Netflix-clone.png" alt="Netflix Clone Frontend">
                     <h3>Project 4</h3>
                     <p>Brief about Project 4. Discuss the impact or potential applications of this project.</p>
                     <a href="#" class="btn">View Project</a>
