--- a/testimonials.html
+++ b/testimonials.html
@@ -43,7 +43,7 @@
                             <i class='bx bxs-star' id="star"></i>
                             <i class='bx bxs-star' id="star"></i>
                         </div>
-                        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ab exercitationem similique odio commodi. Beatae, laboriosam magni provident aspernatur magnam esse, dolore veritatis et doloribus saepe adipisci sint nesciunt totam?"</p>
+                        <p>"Jason's work on our e-commerce platform was outstanding. His attention to detail and ability to create a user-friendly interface significantly improved our online presence. His technical skills and professionalism make him a valuable asset to any development team."</p>
                     </div>
     
                     <div class="testimonial-item">
@@ -56,7 +56,7 @@
                             <i class='bx bxs-star' id="star"></i>
                             <i class='bx bxs-star' id="star"></i>
                         </div>
-                        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ab exercitationem similique odio commodi. Beatae, laboriosam magni provident aspernatur magnam esse, dolore veritatis et doloribus saepe adipisci sint nesciunt totam?"</p>
+                        <p>"Working with Jason on our web application was a pleasure. His expertise in React and his ability to solve complex problems efficiently led to a smooth development process. The final product exceeded our expectations, and I highly recommend Jason for any web development project."</p>
                     </div>
     
                     <div class="testimonial-item">
@@ -69,7 +69,7 @@
                             <i class='bx bxs-star' id="star"></i>
                             <i class='bx bxs-star' id="star"></i>
                         </div>
-                        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ab exercitationem similique odio commodi. Beatae, laboriosam magni provident aspernatur magnam esse, dolore veritatis et doloribus saepe adipisci sint nesciunt totam?"</p>
+                        <p>"Jason developed a custom game for our company's team-building event. His creativity and technical skills shone through in the final product. The game was not only fun but also helped improve team collaboration. Jason's communication throughout the project was excellent, making the entire process smooth and enjoyable."</p>
                     </div>
                 </div>
             </div>
