--- a/portfolio.html
+++ b/portfolio.html
@@ -34,28 +34,28 @@
                 <div class="portfolio-item">
                     <img src="img/Black_jack_game.png" alt="Black_jack_game">
                     <h3>Black Jack Game</h3>
-                    <p>Description of Project 1. Highlight key features and technologies used.</p>
-                    <a href="#" class="btn">View Project</a>
+                    <p>Description: A classic casino card game implemented using HTML and CSS. This project demonstrates my ability to create interactive web-based games without relying on JavaScript. It features a visually appealing interface that simulates the Black Jack experience, showcasing my skills in layout design and CSS styling for game elements.</p>
+                    <a href="https://jason3896.github.io/blackjack/" class="btn">View Project</a>
                 </div>
                 <div class="portfolio-item">
                     <img src="img/Flipped_card.png" alt="Flipped_card">
                     <h3>Flipped Card</h3>
-                    <p>Description of Project 2. Explain the problem it solves and your role.</p>
-                    <a href="#" class="btn">View Project</a>
+                    <p>Description: An interactive memory game built with HTML and CSS. This project showcases my skills in creating visually appealing and responsive layouts. This features beautifully designed cards and smooth animations, all achieved through clever use of CSS transitions and transforms.</p>
+                    <a href="https://jason3896.github.io/flipped-card/" class="btn">View Project</a>
                 </div>
             </div>
             <div class="portfolio-column">
                 <div class="portfolio-item">
                     <img src="img/Amazon.png" alt="Amazon Clone Frontend">
-                    <h3>Chat App</h3>
-                    <p>Overview of Project 3. Mention any notable achievements or challenges overcome.</p>
-                    <a href="#" class="btn">View Project</a>
+                    <h3>Amazon Clone Frontend</h3>
+                    <p>Description: A responsive e-commerce website frontend inspired by Amazon's design, built using HTML and CSS. This project demonstrates my ability to create complex, visually accurate layouts and styling. It features a product catalog, navigation bar, and product cards, showcasing my attention to detail in replicating a professional e-commerce interface.</p>
+                    <a href="https://jason3896.github.io/amazon-clone/" class="btn">View Project</a>
                 </div>
                 <div class="portfolio-item">
                     <img src="img/Netflix-clone.png" alt="Netflix Clone Frontend">
-                    <h3>Project 4</h3>
-                    <p>Brief about Project 4. Discuss the impact or potential applications of this project.</p>
-                    <a href="#" class="btn">View Project</a>
+                    <h3>Netflix Clone Frontend</h3>
+                    <p>Description: A frontend clone of Netflix's user interface, built with HTML, CSS, and JavaScript. This project showcases my skills in creating modern, responsive web applications with interactive elements. It includes a dynamic content grid, category sliders, and hover effects, closely mirroring the look and feel of the popular streaming service.</p>
+                    <a href="https://jason3896.github.io/Netflix-clone/" class="btn">View Project</a>
                 </div>
             </div>
         </div>
