--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             </li>
 
             <li>
-                <a href="index.html">About Me</a>
+                <a href="/index.html#home">About Me</a>
             </li>
 
             <li>
